Fix overflow styling

--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,15 @@ body {
     right: 0px;
     top: 0px;
     background-color: #e8d8cb;
+
+    z-index: 3;
+
+    display: flex;
+    flex-direction: column;
+}
+
+#frames {
+    overflow-y: scroll;
 }
 
 .snapshot {
@@ -67,8 +76,6 @@ body {
     align-items: center;
     border: 1px solid #00000047;
     margin: 5px;
-
-    overflow-y: scroll;
 }
 
 .snapshot span {
